Better keep cooler

--- a/cgminer.conf
+++ b/cgminer.conf
@@ -35,10 +35,11 @@
 "gpu-platform" : "0",
 "gpu-threads" : "1",
 
+"auto-gpu" : true,
 "auto-fan" : true,
-"temp-cutoff" : "94",
-"temp-overheat" : "90",
-"temp-target" : "80",
+"temp-cutoff" : "92",
+"temp-overheat" : "86",
+"temp-target" : "76",
 "temp-hysteresis" : "3",
 
 "api-mcast-port" : "4028",
