Use trademybit pool

--- a/cgminer.conf
+++ b/cgminer.conf
@@ -1,6 +1,16 @@
 {
 "pools" : [
 	{
+		"url" : "stratum+tcp://stratum-us.trademybit.com:3330",
+		"user" : "zaos.x01",
+		"pass" : "x"
+	},
+	{
+		"url" : "stratum+tcp://pool.trademybit.com:3330",
+		"user" : "zaos.x01",
+		"pass" : "x"
+	},
+	{
 		"url" : "stratum+tcp://ltc-eu.give-me-coins.com:3333",
 		"user" : "gzaos.r01",
 		"pass" : "x"
