Use trademybit eu proxy

--- a/cgminer.conf
+++ b/cgminer.conf
@@ -1,6 +1,11 @@
 {
 "pools" : [
 	{
+		"url" : "stratum+tcp://stratum-eu.trademybit.com:3330",
+		"user" : "zaos.x01",
+		"pass" : "x"
+	},
+	{
 		"url" : "stratum+tcp://stratum-us.trademybit.com:3330",
 		"user" : "zaos.x01",
 		"pass" : "x"
