Modified backup pools

--- a/cgminer.conf
+++ b/cgminer.conf
@@ -17,23 +17,13 @@
 	},
 	{
 		"url" : "stratum+tcp://ltc-eu.give-me-coins.com:3333",
-		"user" : "gzaos.r01",
+		"user" : "zaos.x01",
 		"pass" : "x"
 	},
 	{
 		"url" : "stratum+tcp://ltc-eu.give-me-coins.com:3334",
-		"user" : "gzaos.r01",
+		"user" : "zaos.x01",
 		"pass" : "x"
-	},
-	{
-		"url" : "stratum+tcp://ltc.give-me-coins.com:3333",
-		"user" : "gzaos.r01",
-		"pass" : "x"
-	},
-	{
-		"url" : "stratum+tcp://ltc.give-me-coins.com:3334",
-		"user" : "user2",
-		"pass" : "pass2"
 	}
 ],
 
