Tune for multipool: lower stales and don't leave the pool during coin switch

--- a/cgminer.conf
+++ b/cgminer.conf
@@ -22,6 +22,8 @@
 	}
 ],
 
+"failover-only" : true,
+
 "intensity" : "18",
 "vectors" : "1",
 "worksize" : "256",
@@ -44,12 +46,12 @@
 
 "api-mcast-port" : "4028",
 "api-port" : "4028",
-"expiry" : "120",
+"expiry" : "1",
 "hotplug" : "5",
 "log" : "5",
 "no-pool-disable" : true,
-"queue" : "1",
-"scan-time" : "30",
+"queue" : "5",
+"scan-time" : "1",
 "scrypt" : true,
 "shares" : "0",
 
